tests/snapshots/cli__follow_paths_batch.snap
---
source: tests/cli.rs
assertion_line: 960
info:
  program: flake-edit
  args:
    - "--diff"
    - follow
    - "[FIXTURES]/centerpiece.flake.nix"
    - "[FIXTURES]/first_nested_node.flake.nix"
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: 2 file(s) failed during batch processing
  - [FIXTURES]/centerpiece.flake.nix: could not read lock file '[FIXTURES]/flake.lock': failed to read [FIXTURES]/flake.lock: No such file or directory (os error 2)
  - [FIXTURES]/first_nested_node.flake.nix: could not read lock file '[FIXTURES]/flake.lock': failed to read [FIXTURES]/flake.lock: No such file or directory (os error 2)

hint: run `flake-edit list` against each failing file to verify input names
