tests/snapshots/cli__follow_paths_incompatible_with_flake_flag.snap
---
source: tests/cli.rs
assertion_line: 755
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/centerpiece.flake.nix"
    - follow
    - "[FIXTURES]/first_nested_node.flake.nix"
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: `--flake` and `--lock` cannot be used with `follow [PATHS]`
