tests/snapshots/cli__follow_paths_incompatible_with_lock_flag.snap
---
source: tests/cli.rs
assertion_line: 770
info:
  program: flake-edit
  args:
    - "--lock-file"
    - "[FIXTURES]/centerpiece.flake.lock"
    - follow
    - "[FIXTURES]/first_nested_node.flake.nix"
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: `--flake` and `--lock` cannot be used with `follow [PATHS]`
