tests/snapshots/cli__follow_paths_single@centerpiece.snap
---
source: tests/cli.rs
assertion_line: 949
info:
  program: flake-edit
  args:
    - "--diff"
    - follow
    - "[FIXTURES]/centerpiece.flake.nix"
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: 1 file(s) failed during batch processing
  - [FIXTURES]/centerpiece.flake.nix: could not read lock file '[FIXTURES]/flake.lock': failed to read [FIXTURES]/flake.lock: No such file or directory (os error 2)

hint: run `flake-edit list` against each failing file to verify input names
