tests/snapshots/cli__follow_sentinel_when_apply_rejects_all@follow_depth_10.snap
---
source: tests/cli.rs
assertion_line: 761
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/transitive_with_orphan_follow.flake.nix"
    - "--lock-file"
    - "[FIXTURES]/transitive_with_orphan_follow.flake.lock"
    - "--diff"
    - follow
    - "--depth"
    - "10"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
All inputs are already deduplicated.

----- stderr -----
